--- a/examples.html
+++ b/examples.html
@@ -14,9 +14,9 @@
   <body>
     <div id="sidebar">
       <b>LazyMenu</b>
-      <a href="/">Home</a> <br>
-       <a href="/getting-started.html">Getting Started</a> <br>
-      <a href="/docs.html">Docs</a> <br>
+      <a href="/LazyMenu">Home</a> <br>
+       <a href="/LazyMenu/getting-started.html">Getting Started</a> <br>
+      <a href="/LazyMenu/docs.html">Docs</a> <br>
       <i>Examples</i>
       <div>version: v0.0</div>
     </div>
