--- a/docs.html
+++ b/docs.html
@@ -14,10 +14,10 @@
   <body>
     <div id="sidebar">
       <b>LazyMenu</b>
-      <a href="/">Home</a> <br>
-      <a href="https://lazymenu.hmarin.repl.co/getting-started.html">Getting Started</a> <br>
+      <a href="/LazyMenu">Home</a> <br>
+      <a href="getting-started.html">Getting Started</a> <br>
       <i>Docs</i> <br>
-      <a href="/examples.html">Examples</a>
+      <a href="examples.html">Examples</a>
       <div>version: v0.0</div>
     </div>
     
