--- a/docs.html
+++ b/docs.html
@@ -42,7 +42,7 @@ To configure all buttons, use <code>Menu.all</code> <br><br>
 
 <h3>Width</h3>
 Configure the width of a button type. <br>
-The default value is dependant on the string length and font size. <br>
+The default value automatically covers text with the TextMetrics object. <br>
 <b>Example:</b> <code>Menu.main.width = 100;</code> <br><br>
 
 <h3>Height</h3>
